# llm-service

./: .dockerignore  .env.example  .gitignore  Agents.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
app/: main.py
app/adapters/: __init__.py
app/adapters/clients/: __init__.py  token_manager_client.py
app/api/: __init__.py  api-endpoints-reference.md  dependencies.py  exception_handlers.py  llm_configuration_endpoints.py  llm_inference_endpoints.py  llm_inference_router.py  user_endpoints.py  user_entitlement_endpoints.py
app/api/management_routers/: __init__.py  catalog_router.py  deployment_router.py  entitlement_router.py  tenant_router.py  user_router.py
app/auth/: __init__.py  auth_dependencies.py  jwt_token_service.py
app/auth/authorization/: __init__.py  cache.py  tenant_access.py  tenant_inference_auth.py
app/clients/: __init__.py  token_manager_client.py
app/core/: __init__.py  exceptions.py  logging.py  request_context.py  secret_store.py
app/core/settings/: __init__.py  loader.py  settings.py
app/database/: __init__.py  base.py  model_catalog.py  provider_catalog.py  session.py  tenant_deployments.py  tenant_memberships.py  tenants.py  user_entitlements.py  users.py
app/database/queries/: __init__.py  model_catalog_queries.py  provider_catalog_queries.py  tenant_deployment_queries.py  tenant_membership_queries.py  tenant_queries.py  user_entitlement_queries.py  user_queries.py
app/execution/: __init__.py  inference_service.py
app/inference_routing/: __init__.py  context_factory.py  contracts.py  credential_resolver.py  deployment_resolver.py  entitlement_resolver.py  exceptions.py  inference-routing-reference.md  models.py  persistence_adapters.py  pipeline.py  provider_validator.py  tenant_resolver.py
app/infrastructure/: __init__.py  cache.py  circuit_breaker.py  http_client_factory.py  provider_circuit_breaker.py  redis_cache.py
app/infrastructure/provider_credentials/: __init__.py  aesgcm.py  contracts.py  crypto.py  environment.py  vault.py
app/providers/: __init__.py  base_provider.py  error_classifier.py  how-providers-work.md  http_errors.py  provider-working-reference.md  registry.py
app/providers/cloud/: __init__.py  azure_openai_provider.py  bedrock_provider.py
app/providers/direct/: __init__.py  anthropic_provider.py  openai_provider.py  vllm_provider.py
app/routing/: __init__.py  contracts.py  credential_resolution_service.py  deployment_resolution_service.py  deployment_resolver.py  exceptions.py  provider_route_validation_service.py  request_resolution_service.py  resolution_models.py  resolved_execution_context_factory.py  tenant_resolution_service.py  user_entitlement_resolution_service.py
app/schemas/: __init__.py  auth_schema.py  enums.py  management_filters.py  management_schema.py  requests.py  requests_schema.py  responses.py  responses_schema.py
app/services/: __init__.py  inference.py  management_helpers.py  management_reference_validation.py
app/services/catalog/: __init__.py  model_catalog.py  provider_catalog.py
app/services/tenants/: __init__.py  deployment.py  membership.py  tenant.py
app/services/users/: __init__.py  entitlement.py  user.py
config/: base.yaml
config/cloud_providers/: aws.yaml  azure.yaml  azure_openai.yaml  bedrock.yaml
config/environments/: development.yaml  production.yaml  staging.yaml
config/providers/: anthropic.yaml  openai.yaml  vllm.yaml
documents/: enterprise-llm-hybrid-schema.md  implementation_plan.md  llm-provider-microservice-hld.md  walkthrough.md
examples/: demo_full_request_lifecycle_with_live_openai.py  openai_direct_resolution_demo.py  verify_routing_rules_circuit_breaker_and_secret_isolation.py
infrastructure/: __init__.py  _ansi.py  manage_local_infrastructure.py  test_database_layer.py  test_postgres_connection.py  test_redis_connection.py  test_vault_connection.py
postgres_schema/: 2_llm_models_config_schema.sql  5_llm_models_active_capacity_constraint.sql  5_llm_models_active_capacity_constraint_rollback.sql  create_configuration_audit_log.sql  create_llm_token_allocations.sql  create_model_catalog.sql  create_provider_catalog.sql  create_required_postgres_capabilities.sql  create_tenant_deployments.sql  create_tenant_memberships.sql  create_tenants.sql  create_token_manager_deployment_capacity_view.sql  create_updated_at_timestamp_trigger.sql  create_user_entitlements.sql  create_users.sql  initial_schema.sql  schema_creation_order.md
tests/: AGENTS.md  CLAUDE.md  conftest.py
tests/unit/: test_exceptions.py  test_management_helpers.py  test_request_context.py
tests/unit/inference_routing/: conftest.py  test_context_factory.py  (+6 more)
vault/policies/: llm_service_read.hcl
vault/scripts/: init.sh
(+6 files in other folders)
